--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home-mgmt-app",
   "version": "1.0.0",
   "description": "App that helps manage home maintenance and care.",
-  "main": "gulp.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,12 +19,20 @@
   "homepage": "https://github.com/homeManagement/home-mgmt-app#readme",
   "dependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.1.1"
+    "gulp-sourcemaps": "^2.1.1",
+    "jwt-simple": "^0.5.0",
+    "massive": "^2.5.0",
+    "moment": "^2.15.2",
+    "request": "^2.75.0",
+    "satellizer": "^0.15.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
