--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
+    "cron": "^1.1.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
