--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/homeManagement/home-mgmt-app#readme",
   "dependencies": {
+    "angular-animate": "^1.5.8",
     "babel-preset-es2015": "^6.16.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
