email working on cron jobs

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jwt-simple": "^0.5.0",
     "massive": "^2.5.0",
     "moment": "^2.15.2",
+    "nodemailer": "^2.6.4",
     "request": "^2.75.0",
     "satellizer": "^0.15.5",
     "twilio": "^2.11.0"
